[gd_scene load_steps=7 format=3 uid="uid://4b0rsfr4udam"]

[ext_resource type="Script" path="res://Scripts/material_counter.gd" id="1_nlbnh"]
[ext_resource type="Texture2D" uid="uid://dvgnybiq5hyvd" path="res://Sprites/Panels/gray-panel-2px-border.png" id="2_ake4p"]
[ext_resource type="Texture2D" uid="uid://dgfls2rebh2dp" path="res://Sprites/Icons/stone.png" id="3_h7ntd"]
[ext_resource type="FontFile" uid="uid://c0dm4ewi5648q" path="res://Fonts/press_start_2p/PressStart2P.ttf" id="4_dblea"]
[ext_resource type="Texture2D" uid="uid://cnyb60d88fty0" path="res://Sprites/Placeholder/PlaceholderMaterialFocus.png" id="5_74guf"]
[ext_resource type="Script" path="res://Scripts/key_focus_component.gd" id="6_7wtt2"]

[node name="MaterialCounter" type="MarginContainer"]
custom_minimum_size = Vector2(82, 42)
offset_right = 82.0
offset_bottom = 42.0
focus_mode = 2
script = ExtResource("1_nlbnh")

[node name="BackgroundRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_ake4p")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="TooltipMarker" type="Marker2D" parent="."]
position = Vector2(82, 0)

[node name="InnerMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Icon" type="TextureRect" parent="InnerMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("3_h7ntd")
stretch_mode = 3

[node name="AmountLabel" type="Label" parent="InnerMargin"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.87451, 0.878431, 0.886275, 1)
theme_override_fonts/font = ExtResource("4_dblea")
theme_override_font_sizes/font_size = 8
text = "999.9M"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GainLabel" type="Label" parent="InnerMargin"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.87451, 0.878431, 0.886275, 1)
theme_override_fonts/font = ExtResource("4_dblea")
theme_override_font_sizes/font_size = 8
text = "+999.9M/d"
horizontal_alignment = 2
vertical_alignment = 2

[node name="OuterMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = -2
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = -2
theme_override_constants/margin_bottom = -2

[node name="Focus" type="NinePatchRect" parent="OuterMargin"]
visible = false
layout_mode = 2
texture = ExtResource("5_74guf")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="KeyFocusComponent" type="Node" parent="OuterMargin/Focus"]
script = ExtResource("6_7wtt2")
targeted_texture = "texture"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
